[gd_scene load_steps=10 format=3 uid="uid://k5asl6sekmt2"]

[ext_resource type="Texture2D" uid="uid://dissbslqst6t6" path="res://ui/grid-area.png" id="1"]
[ext_resource type="Script" path="res://GameLogic.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cl3ms0r6v5q8b" path="res://fonts/prstart.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://d03dyv1c8jcr4" path="res://ui/blue-button.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dm1um1x33l404" path="res://ui/salmon-button.png" id="5"]
[ext_resource type="Script" path="res://UserInput.gd" id="6"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/17/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/18/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/19/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/23/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/29/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/42/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_eq7bx"]
font_size = 21

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_left = 481.0
offset_top = 2.0
offset_right = 1282.0
offset_bottom = 482.0
rotation = 1.5708
color = Color(0.0117647, 0.192157, 0.160784, 1)

[node name="GameArea" type="Node2D" parent="."]
position = Vector2(35, 133)
script = ExtResource("2")
_size = 4
_colors = [Color(0.72549, 0.87451, 0.890196, 1), Color(0.290196, 0.615686, 0.619608, 1), Color(0.00392157, 0.470588, 0.498039, 1), Color(0.0035, 0.332675, 0.35, 1), Color(0.67, 0.1876, 0.36448, 1), Color(0.56, 0.14, 0.294, 1), Color(0.47, 0.0752, 0.21996, 1), Color(0.61, 0.0915, 0.445808, 1), Color(0.53, 0.1113, 0.397412, 1), Color(0.73, 0.1533, 0.182135, 1), Color(0, 0, 0, 1)]

[node name="Grid" type="Sprite2D" parent="GameArea"]
position = Vector2(2, 0)
texture = ExtResource("1")
centered = false

[node name="Pivot" type="Node2D" parent="GameArea"]
position = Vector2(52, 52)

[node name="GUIArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -371.0
offset_top = -20.0
offset_right = -371.0
offset_bottom = -20.0
script = ExtResource("6")

[node name="Score" type="Label" parent="GUIArea"]
texture_filter = 1
layout_mode = 0
offset_left = 369.0
offset_top = 51.0
offset_right = 705.0
offset_bottom = 94.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 5
text = "Score: 0"
label_settings = SubResource("LabelSettings_eq7bx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="best_score" type="Label" parent="GUIArea"]
auto_translate_mode = 1
texture_filter = 1
layout_mode = 0
offset_left = 387.0
offset_top = 95.0
offset_right = 747.0
offset_bottom = 138.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 3
text = "Best Score: : 0"
label_settings = SubResource("LabelSettings_eq7bx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNewGame" type="Button" parent="GUIArea"]
layout_mode = 0
offset_left = 457.0
offset_top = 590.0
offset_right = 769.0
offset_bottom = 678.0
icon = ExtResource("4")
flat = true

[node name="Label" type="Label" parent="GUIArea/ButtonNewGame"]
texture_filter = 1
layout_mode = 0
offset_right = 312.0
offset_bottom = 86.0
theme_override_fonts/font = SubResource("2")
text = "RESET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonExit" type="Button" parent="GUIArea"]
layout_mode = 0
offset_left = 458.0
offset_top = 700.0
offset_right = 770.0
offset_bottom = 788.0
icon = ExtResource("5")
flat = true

[node name="Label" type="Label" parent="GUIArea/ButtonExit"]
texture_filter = 1
layout_mode = 0
offset_right = 312.0
offset_bottom = 86.0
theme_override_fonts/font = SubResource("2")
text = "UNDO"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GUIArea/ButtonNewGame" to="GameArea" method="reset_game"]
[connection signal="pressed" from="GUIArea/ButtonNewGame" to="GUIArea" method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="GUIArea/ButtonExit" to="GUIArea" method="_on_ButtonExit_pressed"]
